create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -496,7 +496,7 @@ h6,
   text-align: left;
 }
 #msg-box6-3 P {
-  text-align: left;
+  text-align: center;
 }
 #msg-box7-7 .mbr-section-title,
 #msg-box7-7 .lead p {
@@ -586,7 +586,7 @@ h6,
   font-size: 18px;
 }
 #header2-k .mbr-section-title SPAN {
-  color: #f7da64;
+  color: #2b0680;
 }
 #form1-p .form-control-label {
   color: #232323;
