--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,7 @@
+@import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Oswald:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
 
 
 
@@ -14,11 +14,11 @@ body,
 input,
 textarea,
 .mbr-company .list-group-text {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .mbr-footer-content li,
 .mbr-footer .mbr-contacts li {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Roboto', sans-serif;
 }
 .btn,
 .alert,
@@ -58,6 +58,12 @@ h6,
 .mbr-footer .mbr-contacts strong {
   font-family: 'Lato', sans-serif;
 }
+.btn {
+  border-radius: 1.6em;
+}
+.mbr-subscribe .btn {
+  border-radius: 1.6em !important;
+}
 .btn-sm,
 .lead a,
 .lead blockquote,
@@ -65,14 +71,14 @@ h6,
 .mbr-section-hero .mbr-section-lead,
 .mbr-cards .card-subtitle,
 .mbr-testimonial .card-block {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
 }
 .mbr-author-name {
   font-family: 'Lato', sans-serif;
 }
 .mbr-author-desc {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
 }
 .mbr-plan-title {
@@ -80,7 +86,7 @@ h6,
 }
 .mbr-plan-subtitle,
 .mbr-plan-price-desc {
-  font-family: 'Oswald', sans-serif;
+  font-family: 'Roboto', sans-serif;
   font-style: normal;
 }
 .bg-primary {
@@ -119,8 +125,8 @@ h6,
   border-color: #ba2b1c !important;
 }
 .btn-secondary {
-  background-color: #bfcecb;
-  border-color: #bfcecb;
+  background-color: #efefef;
+  border-color: #efefef;
   color: #ffffff;
 }
 .btn-secondary:hover,
@@ -129,14 +135,14 @@ h6,
 .btn-secondary:active,
 .btn-secondary.active {
   color: #ffffff;
-  background-color: #94ada8;
-  border-color: #94ada8;
+  background-color: #c9c9c9;
+  border-color: #c9c9c9;
 }
 .btn-secondary.disabled,
 .btn-secondary:disabled {
   color: #ffffff !important;
-  background-color: #94ada8 !important;
-  border-color: #94ada8 !important;
+  background-color: #c9c9c9 !important;
+  border-color: #c9c9c9 !important;
 }
 .btn-info {
   background-color: #7e9b9f;
@@ -240,8 +246,8 @@ h6,
 }
 .btn-secondary-outline {
   background: none;
-  border-color: #85a29c;
-  color: #85a29c;
+  border-color: #bcbcbc;
+  color: #bcbcbc;
 }
 .btn-secondary-outline:hover,
 .btn-secondary-outline:focus,
@@ -249,14 +255,14 @@ h6,
 .btn-secondary-outline:active,
 .btn-secondary-outline.active {
   color: #ffffff;
-  background-color: #bfcecb;
-  border-color: #bfcecb;
+  background-color: #efefef;
+  border-color: #efefef;
 }
 .btn-secondary-outline.disabled,
 .btn-secondary-outline:disabled {
   color: #ffffff !important;
-  background-color: #bfcecb !important;
-  border-color: #bfcecb !important;
+  background-color: #efefef !important;
+  border-color: #efefef !important;
 }
 .btn-info-outline {
   background: none;
@@ -417,9 +423,6 @@ h6,
 .mbr-gallery-filter li:hover {
   color: #e25041;
 }
-.scrollToTop_wraper {
-  opacity: 0 !important;
-}
 #menu-0 .hide-buttons .nav-btn {
   display: none !important;
 }
@@ -496,25 +499,61 @@ h6,
   text-align: center;
 }
 #msg-box6-3 P {
+  text-align: center;
+  font-size: 20px;
+  color: #f4ef0e;
+}
+#msg-box6-3 SPAN {
   text-align: left;
 }
-#msg-box7-7 .mbr-section-title,
-#msg-box7-7 .lead p {
+#header3-t .mbr-section-title,
+#header3-t .mbr-section-subtitle {
+  text-align: center;
+}
+#features7-s .card-subtitle {
+  color: #bcbcbc;
+}
+#features7-s .iconbox {
+  background-color: #e25041;
+  border-color: #e25041;
+}
+#features7-s P {
+  font-size: 18px;
+  color: #000000;
+  font-family: 'Open Sans', sans-serif;
+}
+#msg-box2-u .mbr-section-title {
+  color: #fff;
+  font-size: 30px;
+}
+#msg-box2-u .mbr-section-subtitle {
+  color: #a0a0a0;
+}
+#social-buttons4-y .mbr-section-title,
+#social-buttons4-y .btn-social {
   color: #fff;
 }
-#msg-box7-7 H3 {
-  font-size: 21px;
-  text-align: left;
+#contacts5-10 p,
+#contacts5-10 .list-group-text,
+#contacts5-10 .form-control-label {
+  color: #000;
 }
-#msg-box7-7 DIV {
-  font-size: 21px;
+#contacts5-10 strong,
+#contacts5-10 h4 {
+  color: #7e9b9f;
+}
+#contacts5-10 form .form-control {
+  border-color: rgba(0, 0, 0, 0.2);
+  color: #565656;
+}
+#contacts5-10 .mbr-footer-content li {
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
+}
+#contacts5-10 .mbr-company .list-group-text::after {
+  border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
 }
 #footer1-2 P {
   font-family: 'Roboto Condensed', sans-serif;
-}
-#msg-box8-a .mbr-section-title,
-#msg-box8-a p {
-  color: #fff;
 }
 #features2-b .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #2e2e2e;
@@ -529,6 +568,16 @@ h6,
 #features2-b .mbr-cards-col:nth-child(odd) .card-subtitle {
   font-size: 18px;
 }
+#features2-b .mbr-cards-col:nth-child(odd) .card-subtitle DIV {
+  text-align: center;
+}
+#features2-b .mbr-cards-col:nth-child(even) .card-subtitle B {
+  font-size: 16px;
+}
+#features2-b .mbr-cards-col:nth-child(even) .card-subtitle SPAN {
+  font-size: 18px;
+  text-align: right;
+}
 #features6-9 H4 {
   text-align: left;
   font-size: 18px;
@@ -539,6 +588,17 @@ h6,
   font-size: 18px;
   text-align: left;
   color: #232323;
+}
+#msg-box2-x .mbr-section-title {
+  color: #fff;
+}
+#msg-box2-x .mbr-section-subtitle {
+  color: #a0a0a0;
+  font-size: 30px;
+  text-align: center;
+}
+#msg-box2-x .mbr-section-subtitle B {
+  text-align: left;
 }
 #features3-4 H5 {
   font-size: 18px;
@@ -551,19 +611,6 @@ h6,
   font-family: 'Roboto Condensed', sans-serif;
 }
 #features3-4 SPAN {
-  font-size: 19px;
-}
-#header2-1 .mbr-section-title {
-  text-align: center;
-  font-family: 'Roboto', sans-serif;
-  color: #2b0680;
-}
-#header2-1 .mbr-section-title SPAN {
-  font-size: 16px;
-  text-align: right;
-}
-#header2-1 .mbr-section-title DIV {
-  text-align: left;
   font-size: 19px;
 }
 #slider-e H2 {
@@ -586,7 +633,11 @@ h6,
   font-size: 18px;
 }
 #header2-k .mbr-section-title SPAN {
-  color: #2b0680;
+  color: #ffffff;
+  font-size: 30px;
+}
+#header2-k .mbr-section-title DIV {
+  font-size: 30px;
 }
 #form1-p .form-control-label {
   color: #232323;
