--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -1,7 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Open+Sans:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto+Condensed:400,300,700);
-@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
 @import url(https://fonts.googleapis.com/css?family=Roboto:400,300,700);
+@import url(https://fonts.googleapis.com/css?family=Lato:400,300,700);
+
 
 
 
@@ -522,38 +523,15 @@ h6,
   color: #000000;
   font-family: 'Open Sans', sans-serif;
 }
-#msg-box2-u .mbr-section-title {
-  color: #fff;
-  font-size: 30px;
-}
-#msg-box2-u .mbr-section-subtitle {
-  color: #a0a0a0;
-}
-#social-buttons4-y .mbr-section-title,
-#social-buttons4-y .btn-social {
-  color: #fff;
-}
-#contacts5-10 p,
-#contacts5-10 .list-group-text,
-#contacts5-10 .form-control-label {
-  color: #000;
-}
-#contacts5-10 strong,
-#contacts5-10 h4 {
-  color: #7e9b9f;
-}
-#contacts5-10 form .form-control {
-  border-color: rgba(0, 0, 0, 0.2);
-  color: #565656;
-}
-#contacts5-10 .mbr-footer-content li {
-  border-bottom: 1px dotted rgba(0, 0, 0, 0.1);
-}
-#contacts5-10 .mbr-company .list-group-text::after {
-  border-bottom: 1px dotted rgba(0, 0, 0, 0.2);
-}
 #footer1-2 P {
   font-family: 'Roboto Condensed', sans-serif;
+}
+#form2-14 .mbr-section-title {
+  color: #fff;
+  font-size: 18px;
+}
+#form2-14 .mbr-section-subtitle {
+  color: #a0a0a0;
 }
 #features2-b .striped .mbr-cards-col:nth-child(2n+1) {
   background-color: #2e2e2e;
@@ -580,14 +558,18 @@ h6,
 }
 #features6-9 H4 {
   text-align: left;
-  font-size: 18px;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 19px;
+  font-family: 'Roboto', sans-serif;
   color: #232323;
 }
 #features6-9 P {
   font-size: 18px;
   text-align: left;
   color: #232323;
+}
+#features6-9 SPAN {
+  font-family: 'Roboto', sans-serif;
+  color: #000000;
 }
 #msg-box2-x .mbr-section-title {
   color: #fff;
